--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
-    <link href="./styles.css" />
+    <link href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"
+          ><span class="logo-header">Web</span>Studio</a
+        >
         <ul>
           <li><a href="" target="_blank">Studio</a></li>
           <li><a href="" target="_blank">Portfolio</a></li>
