--- a/index.html
+++ b/index.html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
-    <link href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html" class="logo"
-          ><span class="logo-header">Web</span>Studio</a
+          >Web<span class="logo-header">Studio</span></a
         >
-        <ul>
-          <li><a href="" target="_blank">Studio</a></li>
-          <li><a href="" target="_blank">Portfolio</a></li>
-          <li><a href="" target="_blank">Contacts</a></li>
+
+        <ul class="header-nav-menu">
+          <li>
+            <a href="" target="_blank" class="header-nav-menu-li">Studio</a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="header-nav-menu-li">Portfolio</a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="header-nav-menu-li">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="header-nav-address">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
@@ -27,9 +40,9 @@
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
       <section>
         <h2>About Us</h2>
