--- a/index.html
+++ b/index.html
@@ -15,26 +15,35 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-header">Studio</span></a
+        <a href="./index.html" class="header-logo"
+          >Web<span class="header-logo-web">Studio</span></a
         >
 
-        <ul class="header-nav-menu">
-          <li>
+        <ul class="header-nav-menu-list">
+          <li class="header-nav-menu-item">
             <a href="" target="_blank" class="header-nav-menu-li">Studio</a>
           </li>
-          <li>
+          <li class="header-nav-menu-item">
             <a href="" target="_blank" class="header-nav-menu-li">Portfolio</a>
           </li>
-          <li>
+          <li class="header-nav-menu-item">
             <a href="" target="_blank" class="header-nav-menu-li">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul class="header-nav-address">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="header-nav-address-list">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-nav-address-item>info@devstudio.com"
+            ></a>
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="header-nav-address-item"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -44,88 +53,92 @@
         <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
       </section>
-      <section>
-        <h2>About Us</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="main-aboutus">
+        <h2 class="main-aboutus-title">About Us</h2>
+        <ul class="main-aboutus-list">
+          <li class="made-aboutus-item">
+            <h3 class="main-aboutus-subtittle">Strategy</h3>
+            <p class="main-aboutus-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="made-item">
+            <h3 class="main-aboutus-subtittle">Punctuality</h3>
+            <p class="main-aboutus-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="made-item">
+            <h3 class="main-aboutus-subtittle">Diligence</h3>
+            <p class="main-aboutus-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="made-item">
+            <h3 class="main-aboutus-subtittle">Technologies</h3>
+            <p class="main-aboutus-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="main-ourteam">
+        <h2 class="main-ourteam-title">Our Team</h2>
+        <ul class="main-ourteam-list">
+          <li class="main-ourteam-item">
             <img
               src="./images/img1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
+              class="main-ourteam-item-img"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="main-ourteam-subtitle">Mark Guerrero</h3>
+            <p class="main-ourteam-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="main-ourteam-item">
             <img
               src="./images/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
+              class="main-ourteam-item-img"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="main-ourteam-subtitle">Tom Ford</h3>
+            <p class="main-ourteam-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="main-ourteam-item">
             <img
               src="./images/img3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
+              class="main-ourteam-item-img"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="main-ourteam-subtitle">Camila Garcia</h3>
+            <p class="main-ourteam-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="main-ourteam-item">
             <img
               src="./images/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
+              class="main-ourteam-item-img"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="main-ourteam-subtitle">Daniel Wilson</h3>
+            <p class="main-ourteam-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer-logo">
       <a href="./index.html">WebStudio</a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
