--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </section>
     </main>
     <footer class="footer-logo">
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span class="footer-logo-web">Web</span>Studio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
