--- a/index.html
+++ b/index.html
@@ -135,9 +135,70 @@
           </li>
         </ul>
       </section>
+      <section class="main-portfolio">
+        <h2 class="main-portfolio-title">Our Portfolio</h2>
+        <ul class="main-portfolio-list">
+          <li class="main-portfolio-item">
+            <img
+              src="./images/bankingapp.jpg"
+              alt="bankingapp"
+              class="main-portfolio-item-img"
+            />
+            <h3 class="main-portfolio-item-title">Banking App</h3>
+            <p class="main-portfolio-item-text">App</p>
+          </li>
+          <li class="main-portfolio-item">
+            <img
+              src="./images/cashlesspayment.jpg"
+              alt="cashlesspayment"
+              class="main-portfolio-item-img"
+            />
+            <h3 class="main-portfolio-item-title">Cashless Payment</h3>
+            <p class="main-portfolio-item-text">Marketing</p>
+          </li>
+          <li class="main-portfolio-item">
+            <img
+              src="./images/meditaionapp.jpg"
+              alt="meditaionapp"
+              class="main-portfolio-item-img"
+            />
+            <h3 class="main-portfolio-item-title">Meditation App</h3>
+            <p class="main-portfolio-item-text">App</p>
+          </li>
+          <li class="main-portfolio-item">
+            <img
+              src="./images/taxiservice.jpg"
+              alt="taxiservice"
+              class="main-portfolio-item-img"
+            />
+            <h3 class="main-portfolio-item-title">Taxi Service</h3>
+            <p class="main-portfolio-item-text">Marketing</p>
+          </li>
+          <li class="main-portfolio-item">
+            <img
+              src="./images/screenillustrations.jpg"
+              alt="screenillustrations"
+              class="main-portfolio-item-img"
+            />
+            <h3 class="main-portfolio-item-title">Screen Illustrations</h3>
+            <p class="main-portfolio-item-text">Design</p>
+          </li>
+          <li class="main-portfolio-item">
+            <img
+              src="./images/onlinecourses.jpg"
+              alt="onlinecourses"
+              class="main-portfolio-item-img"
+            />
+            <h3 class="main-portfolio-item-title">Online Courses</h3>
+            <p class="main-portfolio-item-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer class="footer-logo">
-      <a href="./index.html"><span class="footer-logo-web">Web</span>Studio</a>
+    <footer>
+      <a href="./index.html" class="footer-logo"
+        ><span class="footer-logo-web">Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
