--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a href="./index.html" class="header-logo"
-          >Web<span class="header-logo-web">Studio</span></a
+          >Web<span class="header-logo-studio">Studio</span></a
         >
 
         <ul class="header-nav-menu-list">
@@ -34,10 +34,9 @@
       <address>
         <ul class="header-nav-address-list">
           <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-nav-address-item>info@devstudio.com"
-            ></a>
+            <a href="mailto:info@devstudio.com" class="header-nav-address-item"
+              >info@devstudio.com
+            </a>
           </li>
           <li>
             <a href="tel:+110001111111" class="header-nav-address-item"
@@ -51,7 +50,9 @@
     <main>
       <section class="hero">
         <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <button type="button" class="hero-button">
+          <p class="hero-button-text">Order Service</p>
+        </button>
       </section>
       <section class="main-aboutus">
         <h2 class="main-aboutus-title">About Us</h2>
@@ -139,65 +140,48 @@
         <h2 class="main-portfolio-title">Our Portfolio</h2>
         <ul class="main-portfolio-list">
           <li class="main-portfolio-item">
-            <img
-              src="./images/bankingapp.jpg"
-              alt="bankingapp"
-              class="main-portfolio-item-img"
-            />
+            <img src="./images/bankingapp.jpg" alt="bankingapp"
+            class="main-portfolio-item-img" width: 360px; height: 420px; />
             <h3 class="main-portfolio-item-title">Banking App</h3>
             <p class="main-portfolio-item-text">App</p>
           </li>
           <li class="main-portfolio-item">
-            <img
-              src="./images/cashlesspayment.jpg"
-              alt="cashlesspayment"
-              class="main-portfolio-item-img"
-            />
+            <img src="./images/cashlesspayment.jpg" alt="cashlesspayment"
+            class="main-portfolio-item-img" width: 360px; height: 420px; />
             <h3 class="main-portfolio-item-title">Cashless Payment</h3>
             <p class="main-portfolio-item-text">Marketing</p>
           </li>
           <li class="main-portfolio-item">
-            <img
-              src="./images/meditaionapp.jpg"
-              alt="meditaionapp"
-              class="main-portfolio-item-img"
-            />
+            <img src="./images/meditaionapp.jpg" alt="meditaionapp"
+            class="main-portfolio-item-img" width: 360px; height: 420px; />
             <h3 class="main-portfolio-item-title">Meditation App</h3>
             <p class="main-portfolio-item-text">App</p>
           </li>
           <li class="main-portfolio-item">
-            <img
-              src="./images/taxiservice.jpg"
-              alt="taxiservice"
-              class="main-portfolio-item-img"
-            />
+            <img src="./images/taxiservice.jpg" alt="taxiservice"
+            class="main-portfolio-item-img" width: 360px; height: 420px; />
             <h3 class="main-portfolio-item-title">Taxi Service</h3>
             <p class="main-portfolio-item-text">Marketing</p>
           </li>
           <li class="main-portfolio-item">
-            <img
-              src="./images/screenillustrations.jpg"
-              alt="screenillustrations"
-              class="main-portfolio-item-img"
-            />
+            <img src="./images/screenillustrations.jpg"
+            alt="screenillustrations" class="main-portfolio-item-img" width:
+            360px; height: 420px; />
             <h3 class="main-portfolio-item-title">Screen Illustrations</h3>
             <p class="main-portfolio-item-text">Design</p>
           </li>
           <li class="main-portfolio-item">
-            <img
-              src="./images/onlinecourses.jpg"
-              alt="onlinecourses"
-              class="main-portfolio-item-img"
-            />
+            <img src="./images/onlinecourses.jpg" alt="onlinecourses"
+            class="main-portfolio-item-img" width: 360px; height: 420px; />
             <h3 class="main-portfolio-item-title">Online Courses</h3>
             <p class="main-portfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="footer-logo"
-        ><span class="footer-logo-web">Web</span>Studio</a
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
