--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
@@ -21,7 +25,9 @@
 
         <ul class="header-nav-menu-list">
           <li class="header-nav-menu-item">
-            <a href="" target="_blank" class="header-nav-menu-li">Studio</a>
+            <a href="./index.html" target="_blank" class="header-nav-menu-li"
+              >Studio</a
+            >
           </li>
           <li class="header-nav-menu-item">
             <a href="" target="_blank" class="header-nav-menu-li">Portfolio</a>
@@ -31,15 +37,15 @@
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-nav-address-list">
+      <address class="header-address">
+        <ul class="header-address-list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-nav-address-item"
+            <a href="mailto:info@devstudio.com" class="header-address-item"
               >info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="header-nav-address-item"
+            <a href="tel:+110001111111" class="header-address-item"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -51,130 +57,153 @@
       <section class="hero">
         <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">
-          <p class="hero-button-text">Order Service</p>
+          <span class="hero-button-text">Order Service</span>
         </button>
       </section>
-      <section class="main-aboutus">
-        <h2 class="main-aboutus-title">About Us</h2>
-        <ul class="main-aboutus-list">
-          <li class="made-aboutus-item">
-            <h3 class="main-aboutus-subtittle">Strategy</h3>
-            <p class="main-aboutus-text">
+      <section class="aboutus">
+        <h2 class="aboutus-title">About Us</h2>
+        <ul class="aboutus-list">
+          <li class="aboutus-item">
+            <h3 class="aboutus-subtittle">Strategy</h3>
+            <p class="aboutus-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="made-item">
-            <h3 class="main-aboutus-subtittle">Punctuality</h3>
-            <p class="main-aboutus-text">
+          <li class="aboutus-item">
+            <h3 class="aboutus-subtittle">Punctuality</h3>
+            <p class="aboutus-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="made-item">
-            <h3 class="main-aboutus-subtittle">Diligence</h3>
-            <p class="main-aboutus-text">
+          <li class="aboutus-item">
+            <h3 class="aboutus-subtittle">Diligence</h3>
+            <p class="aboutus-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="made-item">
-            <h3 class="main-aboutus-subtittle">Technologies</h3>
-            <p class="main-aboutus-text">
+          <li class="aboutus-item">
+            <h3 class="aboutus-subtittle">Technologies</h3>
+            <p class="aboutus-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section class="main-ourteam">
-        <h2 class="main-ourteam-title">Our Team</h2>
-        <ul class="main-ourteam-list">
-          <li class="main-ourteam-item">
+      <section class="ourteam">
+        <h2 class="ourteam-title">Our Team</h2>
+        <ul class="ourteam-list">
+          <li class="ourteam-item">
             <img
-              src="./images/img1.jpg"
+              src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
-              class="main-ourteam-item-img"
+              class="ourteam-item-img"
             />
-            <h3 class="main-ourteam-subtitle">Mark Guerrero</h3>
-            <p class="main-ourteam-item-text">Product Designer</p>
+            <h3 class="ourteam-subtitle">Mark Guerrero</h3>
+            <p class="ourteam-item-text">Product Designer</p>
           </li>
-          <li class="main-ourteam-item">
+          <li class="ourteam-item">
             <img
-              src="./images/img2.jpg"
+              src="./images/tomford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
-              class="main-ourteam-item-img"
+              class="ourteam-item-img"
             />
-            <h3 class="main-ourteam-subtitle">Tom Ford</h3>
-            <p class="main-ourteam-item-text">Frontend Developer</p>
+            <h3 class="ourteam-subtitle">Tom Ford</h3>
+            <p class="ourteam-item-text">Frontend Developer</p>
           </li>
-          <li class="main-ourteam-item">
+          <li class="ourteam-item">
             <img
-              src="./images/img3.jpg"
+              src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
-              class="main-ourteam-item-img"
+              class="ourteam-item-img"
             />
-            <h3 class="main-ourteam-subtitle">Camila Garcia</h3>
-            <p class="main-ourteam-item-text">Marketing</p>
+            <h3 class="ourteam-subtitle">Camila Garcia</h3>
+            <p class="ourteam-item-text">Marketing</p>
           </li>
-          <li class="main-ourteam-item">
+          <li class="ourteam-item">
             <img
-              src="./images/img4.jpg"
+              src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
-              class="main-ourteam-item-img"
+              class="ourteam-item-img"
             />
-            <h3 class="main-ourteam-subtitle">Daniel Wilson</h3>
-            <p class="main-ourteam-item-text">UI Designer</p>
+            <h3 class="ourteam-subtitle">Daniel Wilson</h3>
+            <p class="ourteam-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section class="main-portfolio">
-        <h2 class="main-portfolio-title">Our Portfolio</h2>
-        <ul class="main-portfolio-list">
-          <li class="main-portfolio-item">
-            <img src="./images/bankingapp.jpg" alt="bankingapp"
-            class="main-portfolio-item-img" width: 360px; height: 420px; />
-            <h3 class="main-portfolio-item-title">Banking App</h3>
-            <p class="main-portfolio-item-text">App</p>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="./images/bankingapp.jpg"
+              alt="bankingapp"
+              width="360"
+              class="portfolio-item-img"
+            />
+            <h3 class="portfolio-item-title">Banking App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li class="main-portfolio-item">
-            <img src="./images/cashlesspayment.jpg" alt="cashlesspayment"
-            class="main-portfolio-item-img" width: 360px; height: 420px; />
-            <h3 class="main-portfolio-item-title">Cashless Payment</h3>
-            <p class="main-portfolio-item-text">Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/cashlesspayment.jpg"
+              alt="cashlesspayment"
+              width="360"
+              class="portfolio-item-img"
+            />
+            <h3 class="portfolio-item-title">Cashless Payment</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li class="main-portfolio-item">
-            <img src="./images/meditaionapp.jpg" alt="meditaionapp"
-            class="main-portfolio-item-img" width: 360px; height: 420px; />
-            <h3 class="main-portfolio-item-title">Meditation App</h3>
-            <p class="main-portfolio-item-text">App</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/meditaionapp.jpg"
+              alt="meditaionapp"
+              width="360"
+              class="portfolio-item-img"
+            />
+            <h3 class="portfolio-item-title">Meditation App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li class="main-portfolio-item">
-            <img src="./images/taxiservice.jpg" alt="taxiservice"
-            class="main-portfolio-item-img" width: 360px; height: 420px; />
-            <h3 class="main-portfolio-item-title">Taxi Service</h3>
-            <p class="main-portfolio-item-text">Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/taxiservice.jpg"
+              alt="taxiservice"
+              width="360"
+              class="portfolio-item-img"
+            />
+            <h3 class="portfolio-item-title">Taxi Service</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li class="main-portfolio-item">
-            <img src="./images/screenillustrations.jpg"
-            alt="screenillustrations" class="main-portfolio-item-img" width:
-            360px; height: 420px; />
-            <h3 class="main-portfolio-item-title">Screen Illustrations</h3>
-            <p class="main-portfolio-item-text">Design</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/screenillustrations.jpg"
+              alt="screenillustrations"
+              width="360"
+              class="portfolio-item-img"
+            />
+            <h3 class="portfolio-item-title">Screen Illustrations</h3>
+            <p class="portfolio-item-text">Design</p>
           </li>
-          <li class="main-portfolio-item">
-            <img src="./images/onlinecourses.jpg" alt="onlinecourses"
-            class="main-portfolio-item-img" width: 360px; height: 420px; />
-            <h3 class="main-portfolio-item-title">Online Courses</h3>
-            <p class="main-portfolio-item-text">Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/onlinecourses.jpg"
+              alt="onlinecourses"
+              width="360"
+              class="portfolio-item-img"
+            />
+            <h3 class="portfolio-item-title">Online Courses</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
