--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
         <ul class="header-nav-menu-list">
           <li class="header-nav-menu-item">
-            <a href="./index.html" target="_blank" class="header-nav-menu-li"
+            <a href="./index.html" target="_blank" class="header-nav-menu-first"
               >Studio</a
             >
           </li>
           <li class="header-nav-menu-item">
-            <a href="" target="_blank" class="header-nav-menu-li">Portfolio</a>
+            <a href="" target="_blank">Portfolio</a>
           </li>
           <li class="header-nav-menu-item">
-            <a href="" target="_blank" class="header-nav-menu-li">Contacts</a>
+            <a href="" target="_blank">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -56,9 +56,7 @@
     <main>
       <section class="hero">
         <h1 class="hero-slogan">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">
-          <span class="hero-button-text">Order Service</span>
-        </button>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
       <section class="aboutus">
         <h2 class="aboutus-title">About Us</h2>
