--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
         <ul class="header-nav-menu-list">
           <li class="header-nav-menu-item">
-            <a href="./index.html" target="_blank" class="header-nav-menu-first"
-              >Studio</a
-            >
+            <a href="./index.html" target="_blank">Studio</a>
           </li>
           <li class="header-nav-menu-item">
             <a href="" target="_blank">Portfolio</a>
