--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
         >
 
         <ul class="header-nav-menu-list">
-          <li class="header-nav-menu-itemfirst">
-            <a href="./index.html" target="_blank">Studio</a>
+          <li class="header-nav-menu-item">
+            <a
+              href="./index.html"
+              target="_blank"
+              class="header-nav-menu-studio"
+              >Studio</a
+            >
           </li>
           <li class="header-nav-menu-item">
             <a href="" target="_blank">Portfolio</a>
