--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
 
         <ul class="header-nav-menu-list">
           <li class="header-nav-menu-item">
-            <a
-              href="./index.html"
-              target="_blank"
-              class="header-nav-menu-studio"
+            <a href="./index.html" target="_blank" class="header-nav-menu-link"
               >Studio</a
             >
           </li>
           <li class="header-nav-menu-item">
-            <a href="" target="_blank">Portfolio</a>
+            <a href="" target="_blank" class="header-nav-menu-link"
+              >Portfolio</a
+            >
           </li>
           <li class="header-nav-menu-item">
-            <a href="" target="_blank">Contacts</a>
+            <a href="" target="_blank" class="header-nav-menu-link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -96,6 +95,7 @@
       </section>
       <section class="ourteam">
         <h2 class="ourteam-title">Our Team</h2>
+
         <ul class="ourteam-list">
           <li class="ourteam-item">
             <img
