--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
         <ul class="header-nav-menu-list">
           <li class="header-nav-menu-item">
-            <a href="./index.html" target="_blank" class="header-nav-menu-link"
+            <a href="./index.html" class="header-nav-menu-link" target="_blank"
               >Studio</a
             >
           </li>
           <li class="header-nav-menu-item">
-            <a href="" target="_blank" class="header-nav-menu-link"
+            <a href="" class="header-nav-menu-link" target="_blank"
               >Portfolio</a
             >
           </li>
           <li class="header-nav-menu-item">
-            <a href="" target="_blank" class="header-nav-menu-link">Contacts</a>
+            <a href="" class="header-nav-menu-link" target="_blank">Contacts</a>
           </li>
         </ul>
       </nav>
