--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
           <li class="portfolio-item">
             <img
               src="./images/bankingapp.jpg"
-              alt="bankingapp"
-              width="360"
               class="portfolio-item-img"
+              alt="bankingappp"
+              width="360"
             />
             <h3 class="portfolio-item-title">Banking App</h3>
             <p class="portfolio-item-text">App</p>
