--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
               src="./images/bankingapp.jpg"
               alt="bankingappp"
               width="360"
+              height="300"
             />
             <h3 class="portfolio-item-title">Banking App</h3>
             <p class="portfolio-item-text">App</p>
@@ -159,6 +160,7 @@
               src="./images/cashlesspayment.jpg"
               alt="cashlesspayment"
               width="360"
+              height="300"
             />
             <h3 class="portfolio-item-title">Cashless Payment</h3>
             <p class="portfolio-item-text">Marketing</p>
@@ -168,6 +170,7 @@
               src="./images/meditaionapp.jpg"
               alt="meditaionapp"
               width="360"
+              height="300"
             />
             <h3 class="portfolio-item-title">Meditation App</h3>
             <p class="portfolio-item-text">App</p>
@@ -177,6 +180,7 @@
               src="./images/taxiservice.jpg"
               alt="taxiservice"
               width="360"
+              height="300"
             />
             <h3 class="portfolio-item-title">Taxi Service</h3>
             <p class="portfolio-item-text">Marketing</p>
@@ -186,6 +190,7 @@
               src="./images/screenillustrations.jpg"
               alt="screenillustrations"
               width="360"
+              height="300"
             />
             <h3 class="portfolio-item-title">Screen Illustrations</h3>
             <p class="portfolio-item-text">Design</p>
@@ -195,6 +200,7 @@
               src="./images/onlinecourses.jpg"
               alt="onlinecourses"
               width="360"
+              height="300"
             />
             <h3 class="portfolio-item-title">Online Courses</h3>
             <p class="portfolio-item-text">Marketing</p>
