--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
-              src="./images/bankingapp.jpg"
+              src="./images/bankingap.jpg"
               alt="bankingappp"
               width="360"
               height="300"
@@ -157,7 +157,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/cashlesspayment.jpg"
+              src="./images/cashlesspaymentt.jpg"
               alt="cashlesspayment"
               width="360"
               height="300"
@@ -167,7 +167,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/meditaionapp.jpg"
+              src="./images/meditaionappp.jpg"
               alt="meditaionapp"
               width="360"
               height="300"
@@ -177,7 +177,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/taxiservice.jpg"
+              src="./images/taxiservicee.jpg"
               alt="taxiservice"
               width="360"
               height="300"
@@ -187,7 +187,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/screenillustrations.jpg"
+              src="./images/screenillustrationss.jpg"
               alt="screenillustrations"
               width="360"
               height="300"
@@ -197,7 +197,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/onlinecourses.jpg"
+              src="./images/onlinecoursess.jpg"
               alt="onlinecourses"
               width="360"
               height="300"
