--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
-
+    <header>
       <nav>
         <a href="./index.html" class="header-logo"
           >Web<span class="header-logo-studio">Studio</span></a
